<resources>
    <string name="app_name">Travel App</string>
    <string name="mistake">mistake</string>
    <string name="load_data">Load Data</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="transfers_count">Transfers count:</string>
    <string name="select_class">Select Class</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="transfers">Transfers:</string>
    <string name="type">Type:</string>
</resources>